<resources>
    <string name="app_name">Material Design App Demo</string>
    <string name="title_activity_main">Nav Demo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav1">Login Activity</string>
    <string name="nav2">Tabs Activity</string>
    <string name="nav3">Material Design</string>
    <string name="nav4">Navigation Item 4</string>
    <string name="nav5">Navigation Item 5</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Open</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="text_dissmis">Dismiss</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_material">MaterialActivity</string>
    <string name="my_name">Denis Kotenko</string>
</resources>
